integrations/salesforce/mdapi/objects/Case.object
<!-- Customer queries and concerns raised through TDM are standard Cases scoped to a dealership. -->
<CustomObject>
    <fields>
        <fullName>Dealership__c</fullName>
        <label>Dealership</label>
        <type>Lookup</type>
        <referenceTo>Dealership__c</referenceTo>
        <relationshipName>Cases</relationshipName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Dealership the customer raised this with.</description>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <type>Lookup</type>
        <referenceTo>Branch__c</referenceTo>
        <relationshipName>Cases</relationshipName>
        <deleteConstraint>SetNull</deleteConstraint>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <label>Test Drive</label>
        <type>Lookup</type>
        <referenceTo>Booking__c</referenceTo>
        <relationshipName>Cases</relationshipName>
        <deleteConstraint>SetNull</deleteConstraint>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <type>Lookup</type>
        <referenceTo>Vehicle_Model__c</referenceTo>
        <relationshipName>Cases</relationshipName>
        <deleteConstraint>SetNull</deleteConstraint>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>TDM Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Test_Drive</fullName><default>false</default></value>
                <value><fullName>Vehicle_Information</fullName><default>false</default></value>
                <value><fullName>Pricing_And_Offers</fullName><default>false</default></value>
                <value><fullName>Finance</fullName><default>false</default></value>
                <value><fullName>Service</fullName><default>false</default></value>
                <value><fullName>Complaint</fullName><default>false</default></value>
                <value><fullName>Other</fullName><default>false</default></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Branch_Belongs_To_Dealership</fullName>
        <active>true</active>
        <description>Keeps a case's branch inside its own dealership, so dealership-scoped access can never leak across dealers.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Branch__c)), NOT(ISBLANK(Dealership__c)), Branch__r.Dealership__c &lt;&gt; Dealership__c)</errorConditionFormula>
        <errorDisplayField>Branch__c</errorDisplayField>
        <errorMessage>The selected branch belongs to a different dealership.</errorMessage>
    </validationRules>
</CustomObject>